[package]
name = "billing-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros", "http2", "tracing"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
listenfd = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lettre = "0.11"
uuid = { version = "1", features = ["serde", "v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
validator = { version = "0.16", features = ["derive"] }
chrono = "0.4"
clap = { version = "4", features = ["env", "derive"] }
once_cell = "1"
lazy_static = "1"
reqwest = { version = "0.11", features = ["json"] }
nanoid = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
billing-api-migration = { path = "../billing-api-migration" }
billing-api-entity = { path = "../billing-api-entity" }
itertools = "0.12.0"
